# RKO

./: CLAUDE.md  README.md  app.py  main.py  pyproject.toml  streamlit_app.py
data/: processed_jobs.json  raw_jobs.json
reports/: company_counts.csv  employment_type_counts.csv  industry_counts.csv  industry_keywords.csv  ir_freq_stats.json  ir_index_summary.json  ir_tfidf.json  keyword_frequency.csv  keyword_suggestions.csv  location_counts.csv  summary.json
rko/: __init__.py  ai_client.py  analysis.py  ats.py  config.py  ir_engine.py  preprocess.py  reporting.py  resume.py  scraper.py  storage.py
web/: index.html  styles.css
