[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "groq>=0.11.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.0",
    "requests>=2.33.1",
    "streamlit>=1.40.0",
]